@@ -3,6 +3,8 @@ Revision history for Perl module TestRail::API
 0.037 2016-04-?? TEODESIAN
     - Fix incorrect POD for TestRail::API::createRunInPlan
     - Add testrail-results binary and TestRail::Utils::Find::getResults.
+    - Add TestRail::API::getChildSections, and modify Test::Rail::Parser to recursively search passed sections when spawning runs
+    - Change TestRail::API::getSections to cache the sections in a project.
 
 0.036 2016-04-25 TEODESIAN
     - Fix using wrong perl during testsuite when running binaries
